# scikit-ollama

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  commands.sh  installation.md  installationmd  pyproject.toml  requirements-dev.txt
.github/: pr-labeler.yml
.github/workflows/: draft_release.yml  pr-labeler.yml  pypi-deploy.yml
skollama/: __init__.py  classification.py  config.py  text2text.py  vectorization.py
skollama/classification/: __init__.py
skollama/datasets/: __init__.py  multi_class.py  multi_label.py  summarization.py  translation.py
skollama/llm/: base.py
skollama/llm/gpt/: completion.py  embedding.py  mixin.py  utils.py
skollama/llm/ollama/: completion.py  embedding.py  mixin.py
skollama/memory/: __init__.py  _annoy.py  _sklearn_nn.py  base.py
skollama/models/_base/: classifier.py  tagger.py  text2text.py  vectorizer.py
skollama/models/gpt/: vectorization.py
skollama/models/gpt/classification/: few_shot.py  tunable.py  zero_shot.py
skollama/models/gpt/tagging/: ner.py
skollama/models/gpt/text2text/: summarization.py  translation.py  tunable.py
skollama/models/ollama/: vectorization.py
skollama/models/ollama/classification/: few_shot.py  zero_shot.py
skollama/models/ollama/tagging/: ner.py
skollama/models/ollama/text2text/: summarization.py  translation.py
skollama/models/vertex/classification/: tunable.py  zero_shot.py
skollama/models/vertex/text2text/: tunable.py
skollama/prompts/: builders.py  templates.py
skollama/text2text/: __init__.py
skollama/utils/: __init__.py  manager.py  rendering.py  xml.py
skollama/vectorization/: __init__.py
(+8 files in other folders)
